--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
     font-family: "DM Sans", sans-serif;
   }
   
+  .login, .signup {
+    background-color: white;
+    color: black;
+  }
+
   body {
     @apply text-slate-900 dark:text-slate-100 bg-background-light dark:bg-background-dark;
     font-feature-settings: "cv02", "cv03", "cv04", "cv11";
